--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.start_button {
+  display: inline-block;
+  color: aliceblue;
+  font-weight: bold;
+  background-color: cornflowerblue;
+  height: 40px;
+  line-height: 40px;
+  width: 100px;
+  border-radius: 20px;
+  margin-top: 32px;
+  cursor: pointer;
+  transition: all 0.3s ease-out 0.1s;
+}
+
+.start_button:hover {
+  box-shadow: 3px 3px 10px -6px rgba(0, 0, 0, 0.82);
 }
